2018-02-26 (yuchen)
1. format code style
2. add data manage service
3. change data form
4. remove several unuseful functions

2018-02-27 (hansien)
1. add new model preview
2. delete unuseful code
2. fix preview display
4. add form-add webpage

2018-02-28 (yuchen)
1. 将model-data.service.ts文件由原路径移入service文件夹中，并修复了因修改路径而引起的引用出错的问题
2. 在data-model.ts中添加了数组的定义
3. 重构数据结构，减少数组层数，看起来更为简洁，使用更加方便
4. 添加同模版引用数据，在模板创建的时候全部遍历数据添加引用
5. 添加参数表引用，引用参数表一整列

2018-02-28 (hansien)
1. 实现参数表预览页和详情页显示和跳转 (添加 man-equip-para-list 文件)
2. 优化参数表标名对齐和显示效果 (man-equip-para-list)
3. 修改数据来源模型 (form-data-model/source,data-model/source)

2018-03-01 (hansien)
1. 实现效果：选择数据来源时同时设置多个表单数据 (man-model-add.component.html)
2. 隐藏非用户输入表单数据项 ((man-model-add.component.html))
3. 数据来源为参数表时弹出参数表列表 (man-model-add.component.html)
4. 参数表列表拉取参数表数据 (man-model-add.component.html)
5. 参数表来源数据添加至表单 (格式：expParameter#表名#表头) (man-model-add.component.html)
6. 模块预览界面增加数组显示 (man-model.component.html)
7. 数组数据调整模拟真实 (man-model-add)

2018-03-02 (hansien)
1. 已有模块编辑 (man-model.component)
2. 整合模块编辑和新建入口 （man-model-add）
3. 显示基于 key-value 结构的表单页面 （man-model-add）